fixed bug related to Safari flickering

--- a/dev/webapp/css/base.css
+++ b/dev/webapp/css/base.css
@@ -342,19 +342,19 @@ html, body {
 	-webkit-transition: all 0.2s ease-out;
 	transition: all 0.2s ease-out;
 	
-	-webkit-transform: translateX(30px);
+	/*-webkit-transform: translateX(30px);
 	-moz-transform: translateX(30px);
 	-o-transform: translateX(30px);
-	transform: translateX(30px);	
+	transform: translateX(30px);	*/
 }
 
 .panel:hover .ui-header .ui-controlgroup {		
 	opacity: 1;
-	
-	-webkit-transform: translateX(0px);
+	right: 40px;
+	/*-webkit-transform: translateX(0px);
 	-moz-transform: translateX(0px);
 	-o-transform: translateX(0px);
-	transform: translateX(0px);	
+	transform: translateX(0px);*/	
 }
 
 /* News Ticker */
